# LazyConfigFile

./: LazyConfigFileH.hpp  README.md
Example/: CMakeLists.txt  Config.etpcf  main.cpp
Source/: CMakeLists.txt  LazyConfigFile.cpp  LazyConfigFile.hpp  LazyConfigFileH.hpp
